Fix menu-close button alignment

--- a/src/scss/structure/_menu.scss
+++ b/src/scss/structure/_menu.scss
@@ -78,7 +78,7 @@
 }
 .menu-close {
     position: absolute;
-    margin-top: -50px;
+    margin-top: -51px;
     @media (min-width: $medium) {
         display: none;
     }
